tests/baselines/reference/primitiveTypeAsInterfaceName.errors.txt
==== tests/cases/compiler/primitiveTypeAsInterfaceName.ts (2 errors) ====
    interface number {}
              ~~~~~~
!!! primitiveTypeAsInterfaceName.ts(1,11): error TS2000: Duplicate identifier 'number'.
              ~~~~~~
!!! primitiveTypeAsInterfaceName.ts(1,11): error TS2242: Interface name cannot be 'number'.